syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_get_user.proto";
import "rpc_create_user.proto";
import "rpc_update_user.proto"; 
import "rpc_reset_password.proto";
import "rpc_change_password.proto";
import "rpc_renew_access.proto";
import "rpc_auth_status.proto";
import "rpc_get_clinician.proto";
import "rpc_create_clinician.proto";
import "rpc_update_clinician.proto";
import "rpc_create_patient.proto";
import "rpc_get_patient.proto";
import "rpc_update_patient.proto";
import "rpc_verify_invitation.proto";
import "rpc_login_user.proto";
import "rpc_verify_email.proto";
import "rpc_forgot_password.proto";
import "rpc_verify_forgot_password.proto";
import "rpc_create_patient_clinician_map.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Editor RPM API";
        version: "1.0";
        contact: {
            name: "Editor RPM";
            url: "https://github.com/ofagbola/Editor-RPM-Backend/authentication";
            email: "it@evonmedics.org";
        };
    };
};

service AuthenticationService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new user";
            summary: "Create new user";
        };
    }
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/get_user"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get user record";
            summary: "get user";
        };
    }

    rpc GetProfile (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/get_profile"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get user personal record";
            summary: "get user profile";
        };
    }

    rpc RenewAccess (RenewAccessRequest) returns (RenewAccessResponse) {
        option (google.api.http) = {
            post: "/v1/renew_access"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Renew Access";
            summary: "renew user access";
        };
    }

    rpc AuthStatus (AuthStatusRequest) returns (AuthStatusResponse) {
        option (google.api.http) = {
            post: "/v1/auth_status"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Auth Status";
            summary: "get auth status";
        };
    }

    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            patch: "/v1/update_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to update user";
            summary: "Update user";
        };
    }

    rpc CreateClinician (CreateClinicianRequest) returns (CreateClinicianResponse) {
        option (google.api.http) = {
            post: "/v1/create_clinician"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new clinician";
            summary: "Create new clinician";
        };
    }

    rpc GetClinician (GetClinicianRequest) returns (GetClinicianResponse) {
        option (google.api.http) = {
            get: "/v1/get_clinician"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get clinician record";
            summary: "get clinician";
        };
    }

    rpc UpdateClinician (UpdateClinicianRequest) returns (UpdateClinicianResponse) {
        option (google.api.http) = {
            patch: "/v1/update_clinician"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to update clinician";
            summary: "Update clinician";
        };
    }

    rpc CreatePatient (CreatePatientRequest) returns (CreatePatientResponse) {
        option (google.api.http) = {
            post: "/v1/create_patient"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new patient";
            summary: "Create new patient";
        };
    }

    rpc GetPatient (GetPatientRequest) returns (GetPatientResponse) {
        option (google.api.http) = {
            get: "/v1/get_patient"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get patient record";
            summary: "get patient";
        };
    }

    rpc UpdatePatient (UpdatePatientRequest) returns (UpdatePatientResponse) {
        option (google.api.http) = {
            patch: "/v1/update_patient"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to update patient";
            summary: "Update patient";
        };
    }

    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to login user and get access token & refresh token";
            summary: "Login user";
        };
    }

    rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            get: "/v1/verify_email"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to verify user's email address";
            summary: "Verify email";
        };
    }

    rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse) {
        option (google.api.http) = {
            get: "/v1/forgot_password"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to send user a reset password token";
            summary: "Forgot password";
        };
    }

    rpc VerifyForgotPassword (VerifyForgotPasswordRequest) returns (VerifyForgotPasswordResponse) {
        option (google.api.http) = {
            get: "/v1/verify_forgot_password"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to verify user's token authencity";
            summary: "Verify Forgot password email authencity";
        };
    }

    rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse) {
        option (google.api.http) = {
            patch: "/v1/reset_password"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "reset password";
            summary: "reset id";
        };
    }

    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {
        option (google.api.http) = {
            patch: "/v1/change_password"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "change password";
            summary: "change id";
        };
    }

    rpc CreatePatientClinicianMapping (CreatePatientClinicianMappingRequest) returns (CreatePatientClinicianMappingResponse) {
        option (google.api.http) = {
            post: "/v1/create_patient_clinician_mapping"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "send invitation to either clinician / patient to join network";
            summary: "send invitation";
        };
    }

    rpc VerifyInvitation (VerifyInvitationRequest) returns (VerifyInvitationResponse) {
        option (google.api.http) = {
            post: "/v1/verify_invitation"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "verify invitation sen to join network";
            summary: "send invitation";
        };
    }
}